mapeando a exceção de validacao
